<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotelqatar"
    tools:context=".view.activies.LoginActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="411dp"
        android:layout_height="428dp"
        android:layout_marginBottom="528dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtbienvenida"
        android:layout_width="379dp"
        android:layout_height="507dp"
        android:background="#C8FFFFFF"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:text="
                                                        Bienvenido,                                                            Vivirás Una Experiencia
                Inigualable"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <EditText
        android:id="@+id/txtcontraseñaC"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/txtcontraseñaC"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="534dp" />

    <EditText
        android:id="@+id/txtnombre3"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:drawableStart="@drawable/ico_person"
        android:hint="@string/txtusuario"
        android:maxLength="25"
        app:layout_constraintBottom_toTopOf="@+id/txtcontraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/btnLogin"
        android:textAllCaps="true"
        app:backgroundTint="#83061F"
        app:cornerRadius="8dp"
        app:iconTint="#F20000"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcontraseña"
        app:strokeColor="#FD0808"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNoCuenta"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="691dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="95dp"
        android:layout_height="25dp"
        android:layout_marginEnd="44dp"
        android:text="@string/btnRegistrar"
        android:textColor="#FF0303"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteY="688dp" />

</androidx.constraintlayout.widget.ConstraintLayout>